# solara

./: .gitignore  .replit  AGENTS.md  LICENSE.txt  README.md  app.py  clock.py  config.py  config_loader.py  conftest.py  constants.py  decouple.py  device_config.py  devices.json.example  energy_aggregator.py  energy_cache.py  env.example  json.sh  load_controllers.py  load_manager.py  load_models.py  load_nbc.py  metrics.py  mockdata.py  mqtt_telemetry.py  pyproject.toml  quantization.py  render.yaml  replit.md  replit.nix  requirements.txt  sse_event.py  telegram.py  telegram_client.py  tesla_oauth.py  test_app.py  test_day_boundary.py  test_metrics.py  test_nbc.py  test_start_time_misalignment.py  (+2 more)
.opencode/plans/: TOU.md  cache-pyemvue-api.md  load-management.md  load-manager-diagnostics.md  metrics-refactor.md  mockdata.md  nbc.md  techdebt.md  vocolinc-integration.md
docs/: LOADMANAGER.md  SSE_STREAMING.md  TESLA.md  tesla-fleet-telemetry-setup.md
fleet-telemetry/: compose.yaml.example  config.json.example
templates/: error_retryable.html  index.html  tou.html
tests/: helpers.py  test_app.py  test_clock.py  test_config.py  test_config_di.py  test_config_reload.py  test_controllers.py  test_cycle_context.py  test_day_boundary.py  test_decide_context.py  test_device_config.py  test_device_config_validation.py  test_device_prediction.py  test_energy_aggregator.py  test_energy_cache.py  test_energy_cache_dataclass.py  test_gap_minder.py  test_load_config.py  test_load_controllers.py  test_load_integration.py  test_load_models.py  test_load_models_phase2.py  test_metrics.py  test_mqtt_telemetry.py  test_nbc.py  test_nbc_cache.py  test_nbc_reader.py  test_parsed_metrics_qh.py  test_phase2_integration.py  test_pipeline_stages.py  test_quantization.py  test_sse.py  test_start_time_misalignment.py  test_state_tracker.py  test_structured_logging.py  test_telegram.py  test_telegram_client.py  test_telegram_integration.py  test_telegram_wiring.py  test_tesla_init_state.py  (+6 more)
tests/__pycache__/: test_nbc_reader.cpython-314-pytest-9.0.3.pyo
tests/data/: 2026-06-25-quant.csv
