[project]
name = "solara"
version = "0.1.0"
description = "Simple web service that helps maximize self-consumption of solar energy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "isodate>=0.6.0",
    "pyemvue>=0.18.8",
    "pytz>=2022.0",
    "requests>=2.32.4",
    "python-decouple>=3.6.0",
]

[tool.uv]
package = false
