[project]
name = "solara"
version = "0.1.0"
description = "Simple web service that helps maximize self-consumption of solar energy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohomekit>=1.0.0",
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "isodate>=0.6.0",
    "pyemvue>=0.18.8",
    "pyjwt>=2.8.0",
    "pytz>=2022.0",
    "requests>=2.32.4",
    "urllib3>=2.7.0",
    "mypy>=1.20.1",
    "paho-mqtt>=1.6.0",
    "tesla-fleet-api>=1.4.7",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0",
    "pytest>=9.0.2",
    "types-pytz>=2024.1",
    "types-requests>=2.32",
]

[tool.mypy]
files = ["*.py"]  # was: ["load_manager.py", "app.py"]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vocolinc"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mockdata"
ignore_errors = true  # test data generator, less critical for types

[[tool.mypy.overrides]]
module = "conftest"
ignore_errors = true  # test fixtures, less critical for types

[tool.pylint.design]
max-args = 7
max-attributes = 11
max-locals = 21

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "import-outside-toplevel",
    "broad-exception-caught",
    "no-value-for-parameter",
    "no-member",
    "redefined-outer-name",
    "invalid-name",
    "global-statement",
    "line-too-long",
    "protected-access",
]
