[project]
name = "solara"
version = "0.1.0"
description = "Simple web service that helps maximize self-consumption of solar energy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.1",
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "idna>=3.15",
    "isodate>=0.6.0",
    "pyemvue>=0.18.8",
    "pyjwt>=2.13.0",
    "pytz>=2022.0",
    "requests>=2.32.4",
    "urllib3>=2.7.0",
    "python-decouple>=3.6.0",
]

[tool.uv]
package = false
